<resources>
    <string name="app_name">SoraDisplay</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="sensor_data_label">Sensor</string>
    <string name="weather_now_label">Now</string>
    <string name="weather_icon_description">Weather Icon</string>
    <string name="weather_label_fetching">Fetching…</string>
    <string name="weather_label_next_few_hours">Hourly Forecast</string>
    <string name="weather_label_next_few_days">Daily Forecast</string>
    <string name="weather_min_temp_label">Min</string>
    <string name="weather_max_temp_label">Max</string>
    <string name="weather_humidity_label">Humidity</string>
    <string name="weather_feels_like_label">Feels Like</string>
    <string name="weather_precip_label">Precip:</string>
    <string name="weather_windspeed_label">Wind</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_clock">ClockActivity</string>
    <string name="title_activity_fullscreen_temperature">FullscreenTemperature</string>
    <string name="title_activity_fullscreen">SoraClock</string>
    <string name="generic_blank_string">    </string>
    <string name="generic_degree_celsius">°c</string>
    <string name="generic_rain_label">Rain</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="setting_title">Settings</string>

    <!-- NatureRemo Preferences -->
    <string name="natureremo_preferences">NatureRemo preferences</string>
    <string name="natureremo_api_enable">Enable NatureRemo API integration</string>
    <string name="natureremo_api_enable_summary_on">Periodically query your NatureRemo temperature/humidity </string>
    <string name="natureremo_api_enable_summary_off">NatureRemo query disabled</string>
    <string name="natureremo_api_sync_mins">RestAPI sync period (minutes)</string>
    <string name="natureremo_api_sync_mins_summary">Frequency to query the NatureRemo RestAPI, in minutes</string>
    <string name="natureremo_server_name_title">Server name for sensor info</string>
    <string name="natureremo_server_name_summary">Server name for sensor info/</string>

    <!-- Weather Preferences -->
    <string name="weather_preference">Weather preferences</string>
    <string name="weather_api_enable">Enable VisualCrossing API integration</string>
    <string name="weather_api_enable_summary_on">Periodically download local weather information from VisualCrossing</string>
    <string name="weather_api_enable_summary_off">Weather info disabled</string>
    <string name="weather_api_sync_mins">Weather API sync period (minutes)</string>
    <string name="weather_api_sync_mins_summary">Frequency to download weather info, in minutes</string>
    <string name="weather_server_name_title">Weather data server name</string>
    <string name="weather_server_name_summary">Weather data server name</string>
    <string name="weather_api_location_name">Name of location for weather info</string>
    <string name="weather_api_location_name_summary">Enter name of city in order to download weather info</string>

</resources>